@@ -1,6 +1,12 @@
 2003-07-10  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/GrampsCfg.py (GrampsPreferences.select): Conditional get_path(). 
 	* src/Plugins.py (PluginDialog.on_node_selected): Likewise.
+	* src/plugins/BookReport.py (BookReportDialog.__init__): Do not 
+        initiale book to the empty book (was losing selected style info).
+	* src/plugins/FtmStyleDescendants.py (FtmDescendantReport.__init__): 
+        Call setup() to obtain complete style information.
+	* src/plugins/IndivComplete.py (IndivComplete.__init__): Likewise.
+	* src/plugins/IndivSummary.py (IndivSummary.__init__): Likewise.
 
 2003-07-10  Tim Waugh  <twaugh@redhat.com>
 	* src/Relationship.py: Fix '[...]teenth' relationship name typos.
